--- a/client/src/templates/management.html
+++ b/client/src/templates/management.html
@@ -10,9 +10,10 @@
     <div class="scrollable-content">
         <div class="section">
             <h2>Updates</h2>
-            <button class="btn btn-primary btn-block" ng-click="viewAddShiftForm()">Add Shift</button>
-            <button class="btn btn-primary btn-block" ng-click="viewShiftList()">Shift List</button>
+            <button class="btn btn-primary btn-block" ng-click="viewAddShiftForm()">Add Shift/Event</button>
+            <button class="btn btn-primary btn-block" ng-click="viewShiftList()">Shift/Event List</button>
             <button class="btn btn-primary btn-block" ng-click="viewWarningList()">Warning List</button>
+            <button class="btn btn-primary btn-block" ng-click="viewUserMessages()">View Messages</button>
             <button ng-click="showModalForMassMessage()" class="btn btn-primary btn-block">Send Mass Notification</button>
 
             <div class="list-group">
@@ -211,6 +212,80 @@
             </table>
         </div>
     </div>
+
+    <div class="scrollable-content three-quarter-height" ng-class="{fullheight: !comments}" ng-show="adminMode === 'userMessages'">
+        <div class="section" ng-show="userMessage">
+            <div class="col-md-6">
+                <strong>Message Information</strong>
+                <li class="list-group-item">
+                    <strong>Warning ID Number</strong>
+                    : {{userMessage.id}}
+                </li>
+
+                <li class="list-group-item">
+                    <strong>Headline</strong>
+                    : {{userMessage.headline}}
+                </li>
+
+                <li class="list-group-item">
+                    <strong>Detail</strong>
+                    : {{userMessage.detail}}
+                </li>
+
+                <li class="list-group-item">
+                    <strong>Time</strong>
+                    : {{userMessage.time | date :'medium'}}
+                </li>
+
+            </div>
+            <div class="col-md-6" ng-show="userMessage.event">
+                <strong>Event <button class="btn btn-inline" ng-click="openUrl(userMessage.event.admin_url)">Edit</button></strong>
+                <li class="list-group-item">
+                    <strong>Start</strong>
+                    : {{userMessage.event.start}}
+                </li>
+                <li class="list-group-item">
+                    <strong>End</strong>
+                    : {{userMessage.event.end}}
+                </li>
+                <li class="list-group-item">
+                    <strong>ID</strong>
+                    : {{userMessage.event.id}}
+                </li>
+                <label>Channels</label>
+                <div class="form-control" ng-repeat="channel in userMessage.event.channels">
+                    <label>{{channel.name}}</label>
+                </div>
+
+            </div>
+            <div class="col-md-12">
+                <form>
+                    <input class="form-control btn-block" placeholder="Enter Warning ID to confirm" ng-model="warningIdConfirmation">
+                    <button class="btn btn-primary btn-block" ng-click="deleteWarning(warning)" ng-disabled="warningIdConfirmation != warning.id">Dismiss Warning</button>
+                </form>
+            </div>
+        </div>
+        <div class="section" ng-hide="userMessage">
+            <table class="table table-striped">
+                <input ng-model="search.$" placeholder="Search">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Time</th>
+                    <th>Headline</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr style="cursor: pointer" ng-repeat="listedMessage in userMessages | orderBy: 'time' | filter: search" ng-click="viewMessage(listedMessage.id)" ng-show="listedMessage.id">
+                    <th scope="row">{{listedMessage.id}}</th>
+                    <td>{{listedMessage.time | date :'medium'}}</td>
+                    <td>{{listedMessage.headline}}</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
     <div class="scrollable-content three-quarter-height" ng-class="{fullheight: !comments}" ng-show="adminMode === 'addShift'">
         <div class="section">
             <form>
@@ -285,12 +360,14 @@
                 </div>
                 <div class="modal-body">
                     <form class="form">
+                        <input placeholder="Message Headline" ng-model="notificationHeadline">
                         <textarea class="form-control" placeholder="Additional notification note" ng-model="notificationNote"></textarea>
+                        <label>Active Push</label> <input type="checkbox" ng-model="notificationPush">
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button ng-click="hideModal()" class="btn btn-default">Cancel</button>
-                    <button ng-click="sendOutNotifications(notificationNote)" class="btn btn-primary">Send</button>
+                    <button ng-click="sendOutNotifications(notificationHeadline, notificationNote, notificationPush)" class="btn btn-primary">Send</button>
                 </div>
             </div>
         </div>
