Front end improvements/location model signals

--- a/client/src/less/app.less
+++ b/client/src/less/app.less
@@ -971,7 +971,7 @@ be a descendant of the grid when it is being dragged.
 
 .scrollable-content {
   background-color: #ffffff;
-  background: url(/images/hexagon2.png);
+  //background: url(/images/hexagon2.png);
 }
 
 .app-content {
@@ -980,5 +980,5 @@ be a descendant of the grid when it is being dragged.
 
 .sidebar {
   background-color: #ffffff;
-  background: url(/images/hexagon2.png);
+  //background: url(/images/hexagon2.png);
 }
