--- a/client/src/templates/login.html
+++ b/client/src/templates/login.html
@@ -8,7 +8,7 @@
 
 <div class="scrollable container">
     <div class="scrollable-content">
-        <div class="section">
+        <div class="section jumbotron">
 
             <h1 class="text-center">Hive</h1>
 
